Add gray attributes

--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 63,
    "metadata": {
     "code_folding": [
      127,
@@ -80,7 +80,8 @@
      155,
      172,
      391,
-     427
+     427,
+     439
     ]
    },
    "outputs": [],
@@ -647,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +657,7 @@
        "0"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,9 +670,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'EPD' object has no attribute 'GRAY1'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-66-71d4d8ffda5f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0mLimage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnew\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'L'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mepd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwidth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mheight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# 255: clear the frame\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0mdraw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mImageDraw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDraw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mLimage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m \u001b[0mdraw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mu'微雪电子'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfont\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfont35\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfill\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mepd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGRAY1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m \u001b[0mdraw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m35\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mu'微雪电子'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfont\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfont35\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfill\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mepd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGRAY2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0mdraw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m70\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mu'微雪电子'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfont\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfont35\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfill\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mepd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGRAY3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'EPD' object has no attribute 'GRAY1'"
+     ]
+    }
+   ],
    "source": [
     "epd.init()\n",
     "\n",
@@ -698,30 +711,38 @@
     "Himage = Image.open(pic)\n",
     "epd.display(epd.getbuffer(Himage))\n",
     "\n",
+    "'''4Gray display'''\n",
+    "logging.info(\"4Gray display--------------------------------\")\n",
+    "epd.Init_4Gray()\n",
+    "\n",
+    "Limage = Image.new('L', (epd.width, epd.height), 0)  # 255: clear the frame\n",
+    "draw = ImageDraw.Draw(Limage)\n",
+    "draw.text((20, 0), u'微雪电子', font = font35, fill = epd.GRAY1)\n",
+    "draw.text((20, 35), u'微雪电子', font = font35, fill = epd.GRAY2)\n",
+    "draw.text((20, 70), u'微雪电子', font = font35, fill = epd.GRAY3)\n",
+    "draw.text((40, 110), 'hello world', font = font18, fill = epd.GRAY1)\n",
+    "draw.line((10, 140, 60, 190), fill = epd.GRAY1)\n",
+    "draw.line((60, 140, 10, 190), fill = epd.GRAY1)\n",
+    "draw.rectangle((10, 140, 60, 190), outline = epd.GRAY1)\n",
+    "draw.line((95, 140, 95, 190), fill = epd.GRAY1)\n",
+    "draw.line((70, 165, 120, 165), fill = epd.GRAY1)\n",
+    "draw.arc((70, 140, 120, 190), 0, 360, fill = epd.GRAY1)\n",
+    "draw.rectangle((10, 200, 60, 250), fill = epd.GRAY1)\n",
+    "draw.chord((70, 200, 120, 250), 0, 360, fill = epd.GRAY1)\n",
+    "epd.display_4Gray(epd.getbuffer_4Gray(Limage))\n",
+    "time.sleep(2)\n",
+    "\n",
+    "#display 4Gra bmp\n",
+    "Himage = Image.open(os.path.join(picdir, '2in7_Scale.bmp'))\n",
+    "#    epd.display_4Gray(epd.getbuffer_4Gray(Himage))\n",
+    "time.sleep(2)\n",
+    "\n",
+    "\n",
+    "\n",
     "logging.info(\"Clear...\")\n",
     "# epd.Clear(0xFF)\n",
     "logging.info(\"Goto Sleep...\")\n",
     "epd.sleep()    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "epd.init()"
    ]
   },
   {
