--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,25 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import epdconfig"
+    "# import epdconfig\n",
+    "\n",
+    "# epdconfig = epdconfig.RaspberryPi()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "epdconfig = epdconfig.RaspberryPi()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,18 +63,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {
     "code_folding": [
+     2,
+     15,
+     26,
+     37,
+     48,
+     59,
+     71,
+     83,
+     94,
+     105,
+     116,
      127,
      135,
      141,
      149,
-     155,
-     172,
-     391,
-     427,
-     439
+     155
     ]
    },
    "outputs": [],
@@ -95,10 +95,10 @@
     "        self.cs_pin = epdconfig.CS_PIN\n",
     "        self.width = EPD_WIDTH\n",
     "        self.height = EPD_HEIGHT\n",
-    "#         self.GRAY1  = GRAY1 #white\n",
-    "#         self.GRAY2  = GRAY2\n",
-    "#         self.GRAY3  = GRAY3 #gray\n",
-    "#         self.GRAY4  = GRAY4 #Blackest\n",
+    "        self.GRAY1  = GRAY1 #white\n",
+    "        self.GRAY2  = GRAY2\n",
+    "        self.GRAY3  = GRAY3 #gray\n",
+    "        self.GRAY4  = GRAY4 #Blackest\n",
     "\n",
     "    # lookup tables\n",
     "    lut_vcom_dc = [0x00, 0x00,\n",
@@ -258,7 +258,8 @@
     "        for count in range(0, 42):\n",
     "            self.send_data(self.lut_wb[count])\n",
     "            \n",
-    "    def set_lut_gray(self):\n",
+    "#     def set_lut_gray(self):\n",
+    "    def gray_SetLut(self):\n",
     "        self.send_command(0x20)\n",
     "        for count in range(0, 44):        #vcom\n",
     "            self.send_data(self.gray_lut_vcom[count])\n",
@@ -282,13 +283,12 @@
     "        self.send_command(0x25)\t #vcom\n",
     "        for count in range(0, 42): \n",
     "            self.send_data(self.gray_lut_ww[count])\n",
-    "    \n",
+    "\n",
+    "   \n",
     "    def init(self):\n",
     "        logging.info('init EPD screen (Black & White)')\n",
     "        if (epdconfig.module_init() != 0):\n",
     "            return -1\n",
-    "            \n",
-    "        # EPD hardware init start\n",
     "        self.reset()\n",
     "        \n",
     "        # see pp35: https://www.waveshare.com/w/upload/2/2d/2.7inch-e-paper-Specification.pdf\n",
@@ -338,13 +338,6 @@
     "        logging.debug('power on')\n",
     "        self.send_command(0x04) # POWER_ON\n",
     "        self.ReadBusy()\n",
-    "\n",
-    "        # 0x16 runs a partial display refresh - see p17 in docs\n",
-    "        # purpose is unclear -- does not appear to affect function\n",
-    "#         self.send_command(0x16) # PARTIAL_DISPLAY_REFRESH\n",
-    "#         self.send_data(0x00)\n",
-    "#         self.send_command(0x04) # POWER_ON\n",
-    "#         self.ReadBusy()\n",
     "        \n",
     "        logging.debug('pannel setting')\n",
     "        self.send_command(0x00) # PANEL_SETTING (see p11)\n",
@@ -408,11 +401,11 @@
     "        # Power optimization stage 4\n",
     "        self.send_command(0xF8)\n",
     "        self.send_data(0x93)\n",
-    "        self.send_data(0x2A)\n",
+    "        self.send_data(0x2A)      \n",
     "\n",
     "        logging.debug('reset DFV_EN')\n",
     "        self.send_command(0x16) # PARTIAL_DISPLAY_REFRESH\n",
-    "        self.send_data(0x00)        \n",
+    "        self.send_data(0x00)    \n",
     "\n",
     "        logging.debug('power setting')\n",
     "        self.send_command(0x01) # POWER_SETTING\n",
@@ -420,13 +413,15 @@
     "        self.send_data(0x00) # VCOM_HV, VGHL_LV[1], VGHL_LV[0]\n",
     "        self.send_data(0x2b) # VDH\n",
     "        self.send_data(0x2b) # VDL\n",
-    "#         self.send_data(0x09) # VDHR -- set voltage for red pixel (uneeded in B&W)        \n",
+    "\n",
+    "        logging.debug('power on')\n",
+    "        self.send_command(0x04) # POWER_ON\n",
+    "        self.ReadBusy()\n",
     "\n",
     "        logging.debug('pannel setting')\n",
     "        self.send_command(0x00) # PANEL_SETTING (see p13)\n",
-    "        self.send_data(0xBF) # res 296z160, use LUT, use BW pixles LUT1, scan up, shift rt, booster on, booster off\n",
-    "\n",
-    "        \n",
+    "        self.send_data(0xbf) # res 296z160, use LUT, use BW pixles LUT1, scan up, shift rt, booster on, booster off\n",
+    "     \n",
     "        logging.debug('PLL control frequency setting')\n",
     "        self.send_command(0x30) # PLL_CONTROL\n",
     "        self.send_data(0x90) # original from code 100Hz?\n",
@@ -434,7 +429,7 @@
     "        logging.debug('resolution setting (176x264)')\n",
     "        self.send_command(0x61)\n",
     "        self.send_data(0x00) #176\n",
-    "        self.send_data(0xB0) \n",
+    "        self.send_data(0xb0) \n",
     "        self.send_data(0x01) #264\n",
     "        self.send_data(0x08)\n",
     "\n",
@@ -442,16 +437,13 @@
     "        logging.debug('Vcom and data interval setting')\n",
     "        self.send_command(0X50) #VCOM AND DATA INTERVAL SETTING\n",
     "        self.send_data(0x57) # 0x57 in original code\n",
-    "        \n",
+    "\n",
     "        logging.debug('VCM_DC setting ')       \n",
     "        self.send_command(0x82) # VCM_DC_SETTING_REGISTER\n",
-    "        self.send_data(0x12)        \n",
-    "        \n",
-    "        # setup lookup tables\n",
-    "        logging.debug('set 4gray lookup tables')\n",
-    "        self.set_lut_gray()        \n",
+    "        self.send_data(0x12)         \n",
     "        \n",
     "        return 0 \n",
+    "\n",
     "\n",
     "    def getbuffer(self, image):\n",
     "        # logging.debug(\"bufsiz = \",int(self.width/8) * self.height)\n",
@@ -476,7 +468,7 @@
     "                    if pixels[x, y] == 0:\n",
     "                        buf[int((newx + newy*self.width) / 8)] &= ~(0x80 >> (y % 8))\n",
     "        return buf\n",
-    "    \n",
+    "\n",
     "    def getbuffer_4Gray(self, image):\n",
     "        # logging.debug(\"bufsiz = \",int(self.width/8) * self.height)\n",
     "        buf = [0xFF] * (int(self.width / 4) * self.height)\n",
@@ -512,7 +504,8 @@
     "                    if(i%4 == 0):\n",
     "                        buf[int((newx + (newy * self.width))/4)] = ((pixels[x, y-3]&0xc0) | (pixels[x, y-2]&0xc0)>>2 | (pixels[x, y-1]&0xc0)>>4 | (pixels[x, y]&0xc0)>>6) \n",
     "        return buf\n",
-    "    \n",
+    "\n",
+    "\n",
     "    def display(self, image):\n",
     "        # load image into buffer\n",
     "        self.send_command(0x10) # start transmission 1\n",
@@ -590,11 +583,12 @@
     "                    temp1 <<= 2\n",
     "            self.send_data(temp3)\n",
     "        \n",
-    "        self.set_lut_gray() ## move this into the init so it's the same as the other 1bit init()\n",
+    "        self.gray_SetLut()\n",
     "        self.send_command(0x12)\n",
     "        epdconfig.delay_ms(200)\n",
     "        self.ReadBusy()\n",
     "        # pass\n",
+    "\n",
     "    \n",
     "    #### REVIEW ####\n",
     "    # color arg is not needed -- keep for consistency between color and non-color models?\n",
@@ -627,65 +621,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "import time\n",
-    "from PIL import Image,ImageDraw,ImageFont"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "font_file = str(Path('../../pic/Font.ttc').resolve())\n",
-    "pic = Path('../../pic/2in7.bmp')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "epd = EPD()\n",
-    "epd.init()\n",
-    "# epd.Clear(0xFF)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'EPD' object has no attribute 'GRAY1'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-66-71d4d8ffda5f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0mLimage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnew\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'L'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mepd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwidth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mheight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# 255: clear the frame\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0mdraw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mImageDraw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDraw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mLimage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m \u001b[0mdraw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mu'微雪电子'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfont\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfont35\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfill\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mepd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGRAY1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m \u001b[0mdraw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m35\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mu'微雪电子'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfont\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfont35\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfill\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mepd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGRAY2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0mdraw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m70\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mu'微雪电子'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfont\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfont35\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfill\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mepd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGRAY3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'EPD' object has no attribute 'GRAY1'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:init EPD screen (Black & White)\n",
+      "INFO:root:init EPD screen (Black & White)\n",
+      "INFO:root:1.Drawing on the Horizontal image...\n",
+      "INFO:root:4Gray display--------------------------------\n",
+      "INFO:root:init EPD screen (4Gray & White)\n",
+      "INFO:root:Clear...\n",
+      "INFO:root:Goto Sleep...\n",
+      "INFO:root:enter sleep\n"
      ]
     }
    ],
    "source": [
+    "from pathlib import Path\n",
+    "import time\n",
+    "from PIL import Image,ImageDraw,ImageFont\n",
+    "\n",
+    "import logging\n",
+    "logging.root.setLevel('INFO')\n",
+    "\n",
+    "font_file = str(Path('../../pic/Font.ttc').resolve())\n",
+    "pic = Path('../../pic/2in7.bmp')\n",
+    "picH = Path('../../pic/2in7_Scale.bmp')\n",
+    "\n",
+    "epd = EPD()\n",
+    "epd.init()\n",
+    "# epd.Clear(0xFF)\n",
+    "\n",
     "epd.init()\n",
     "\n",
     "font24 = ImageFont.truetype(font_file, 24)\n",
@@ -733,17 +702,23 @@
     "time.sleep(2)\n",
     "\n",
     "#display 4Gra bmp\n",
-    "Himage = Image.open(os.path.join(picdir, '2in7_Scale.bmp'))\n",
-    "#    epd.display_4Gray(epd.getbuffer_4Gray(Himage))\n",
+    "Himage = Image.open(picH)\n",
+    "epd.display_4Gray(epd.getbuffer_4Gray(Himage))\n",
     "time.sleep(2)\n",
     "\n",
     "\n",
-    "\n",
     "logging.info(\"Clear...\")\n",
-    "# epd.Clear(0xFF)\n",
+    "epd.Clear(0xFF)\n",
     "logging.info(\"Goto Sleep...\")\n",
     "epd.sleep()    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
